--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,38 @@
+# Core Dependencies
+numpy==1.24.3
+pandas==2.0.3
+scipy==1.11.1
 
-# Earthquake Enhanced - Space Engine Requirements
-
-# Core Framework
+# Web Framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-pydantic==2.5.0
+python-multipart==0.0.6
+
+# Database
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
 
 # Async Support
 aiohttp==3.9.1
 asyncio==3.4.3
-
-# Data Processing
-numpy==1.24.3
-pandas==2.0.3
-
-# HTTP Requests
-requests==2.31.0
 
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 
-# CORS Support
-python-multipart==0.0.6
+# API Requests
+requests==2.31.0
 
-# Optional: Database Support (for future integration)
-# psycopg2-binary==2.9.9
-# sqlalchemy==2.0.23
+# Date/Time
+python-dateutil==2.8.2
 
-# Optional: Advanced Visualization (for future enhancement)
-# matplotlib==3.8.2
-# plotly==5.18.0
+# Data Validation
+pydantic==2.5.0
 
-# Development Tools
-black==23.12.0
-flake8==6.1.0
-mypy==1.7.1
+# Optional: For advanced visualization
+matplotlib==3.7.2
+plotly==5.18.0
 
-# Documentation
-mkdocs==1.5.3
-mkdocs-material==9.4.14
+# Optional: For improved performance
+numba==0.58.1
