Complete Tokyo Earthquake Prediction System Package
- Add Tokyo multi-horizon prediction experiment with 2022 test data
- Implement empirical features: seismic moment, distance metrics
- Add triangle spatial feature computation module
- Create comprehensive test suites for all modules
- Include 586 real earthquake events from USGS (2022 Tokyo region)
- Add configuration system via config.yaml
- Update README with complete documentation
- Add ML dependencies (scikit-learn, lightgbm)
- Implement class-weighted models to handle imbalance
- Include unit tests, integration tests, and edge case tests

Key Features:
- Multi-horizon labeling (7d, 14d, 30d)
- Physics-based resonance analysis
- Geometric triangle pattern detection
- Complete data lineage and reproducibility
- Ready for external AI evaluation

Test Data: data/raw/usgs_events/2022_tokyo_07e0d7f2a.json (586 events)
Tests: backend/experiments/tokyo/tests/, backend/features/tests/
Documentation: README.md with setup and usage instructions

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ tmp/
 
 # External Service Outputs
 .external_service_outputs/
+
+# Note: Test data in data/ directory IS tracked and committed
+# This ensures reproducibility and allows external evaluation
