--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,10 @@ plotly==5.18.0
 
 # Optional: For improved performance
 numba==0.58.1
+
+# Machine Learning
+scikit-learn==1.3.0
+lightgbm==4.1.0
+
+# Configuration
+PyYAML==6.0.1
